--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,11 @@ group 'com.rcb.server'
 version '1.0-SNAPSHOT'
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    implementation "com.rcb.dependency:libraryDep"
+    implementation "com.rcb.dependency:libraryDep:1.0-SNAPSHOT"
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
